--- a/src/index.html
+++ b/src/index.html
@@ -48,15 +48,15 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>Creative Endeavors</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <p>Creative</p>
         </div>
       </div>
     </div>
     <div class="item">
       <div class="container">
         <div class="carousel-caption">
-          <h1>Who Am I?</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <h1>Who Am I</h1>
+          <p>Who art thou?</p>
         </div>
       </div>
     </div>
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>What Do I Do?</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <p>Test Me</p>
         </div>
       </div>
     </div>
