--- a/src/home.html
+++ b/src/home.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
-  <title>Connie Flick</title>
+  <title>Home</title>
 </head>
 <body>
 
@@ -101,7 +101,7 @@
 </div>
 <footer>
   <div class="container">
-    <h4>Contact Me</h4>
+    <h3>Contact Me</h3>
     <p>555-123-2323</p>
   </div>
   </footer>
